# SOSE_2025

./: .pdm-python  calculation.py  main.py  my_classes.py  my_functions.py  pyproject.toml  simulate_data  test.py
