[project]
name = "Aufgabe_5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "juliusmayr", email = "mj4127@mci4me.at"},
]
dependencies = ["numpy>=2.2.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
